# jbadlato.github.io

./: .gitignore  CNAME  README.md  america_city_abbreviations.csv  america_routes.csv  america_tickets.csv  home.html  home.php  index.html  intro.md  myst.yml  pyproject.toml  script.js  style.css  ticket-to-ride.ipynb
.github/workflows/: deploy.yml
img/: Thumbs.db
ticket-to-ride/: myst.yml
