[tool.poetry]
name = "jbadlato-github-io"
version = "0.1.0"
description = ""
authors = ["Joseph Badlato <joebadlato@gmail.com>"]
readme = "README.md"
packages = [{include = "jbadlato"}]

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^2.1.4"
ipykernel = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
