[tool.poetry]
name = "jbadlato-github-io"
version = "0.1.0"
description = ""
authors = ["Joseph Badlato <joebadlato@gmail.com>"]
readme = "README.md"
packages = [{include = "jbadlato"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14.1 || >3.14.1,<4.0"
jupyter-book = "^2.1.4"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"
pandas = "^3.0.2"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
ipdb = "^0.13.13"
steinernet = "^0.2.0"
networkx = "^3.6.1"
scipy = "^1.17.1"
more-itertools = "^11.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
